@@ -1,7 +1,9 @@
 ########################################################################
-# Verifies Editor object's AUTOLOAD facility is working correctly
-#   (unfortunately, didn't commit the version I had working yesterday
-#   at home, so either re-develop or )
+# Verifies various Editor methods that were manually coded, rather
+#   than using AUTOLOAD, but are still primarily implementing one
+#   underlying scintilla message.
+# (AUTOLOAD methods are in sci-auto.t; methods implementing multiple
+#   message calls are generally helper functions tested in sci-hlprfns.t)
 ########################################################################
 use 5.010;
 use strict;
@@ -264,6 +266,50 @@ BEGIN {
 
     # cleanup
     editor->setSavePoint(); # pretends like it's been saved, so Notepad++ won't prompt for confirmation
+    notepad->close();
+}
+
+# HELPER: getTargetText()   2020-Apr-12
+#   This test is equivalent creating a file containing "Hello World", then
+#   Running the PythonScript
+#       editor.setTargetRange(6,11)
+#       editor.getTargetText()
+#   Or, equivlanently, NppExec gives:
+#       ================ READY ================
+#       sci_sendmsg SCI_SETTARGETRANGE 6 11
+#       SCI_SENDMSG: SCI_SETTARGETRANGE 6 11
+#       ================ READY ================
+#       sci_sendmsg SCI_GETTARGETTEXT 0 @"<str>"
+#       SCI_SENDMSG: SCI_GETTARGETTEXT 0 @"<str>"
+#       ================ READY ================
+#       echo $(MSG_RESULT) $(MSG_WPARAM) $(MSG_LPARAM)
+#       5  World
+#   The autogenerated getTargetText didn't properly handle
+#       this test, so it was switched to a manual wrapper method,
+#       and now passes.
+{
+    # prep
+    notepad->newFile();
+
+    editor->beginUndoAction();
+
+    # add data
+    editor->setText("Hello World");
+    my $got = editor->getText();
+    is $got, "Hello World", 'setText("Hello World") should set text';
+
+    # test
+    my $exp = 'World';  # position 6-11
+    $got = undef;
+    editor->setTargetRange(6,11);
+    is editor->getTargetStart, 6, 'getTargetStart() should be 6';
+    is editor->getTargetEnd, 11, 'getTargetEnd() should be 11';
+    eval { $got = editor->getTargetText(); 1; } or do { $got = "<crash: $@>"; };
+    is $got, $exp, 'getTargetText() from (6,11) should be "World"';
+
+    # cleanup
+    editor->endUndoAction();
+    editor->undo();
     notepad->close();
 }
 
